// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddRecipient > should hide available balance if fee > balance 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap whitespace-no-break text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with empty array of recipients as default 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with multiple recipients switch 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render with single recipient data 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="shrink-0 css-1p5jpah"
                            data-testid="Avatar"
                          >
                            <div
                              class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                            >
                              <img
                                alt="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                                src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(255, 87, 34)" width="100" height="100"/><circle r="35" cx="70" cy="50" fill="rgb(244, 67, 54)"/><circle r="45" cx="30" cy="40" fill="rgb(0, 150, 136)"/><circle r="40" cx="20" cy="60" fill="rgb(255, 193, 7)"/></svg>"
                                title="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value="D6Z26L69gdk9qYmTv5uzk3uGepigtHY4ax"
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should render without the single & multiple switch 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should set available amount 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                33.75089801
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="33.75089801"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="active css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should show available balance after fee 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                4
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap whitespace-no-break text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class=" css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`AddRecipient > should show zero amount if wallet has zero or insufficient balance 1`] = `
<div>
  <div
    class="css-qb57lz"
  >
    <div
      class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
    >
      <div
        class="text-sm font-semibold transition-colors duration-100"
      >
        Recipient
      </div>
      <div
        class="flex items-center space-x-2"
      >
        <span>
          <div
            class="flex items-center"
          >
            <span
              class="css-1588dqn"
              role="button"
            >
              Single
            </span>
            <label
              class="css-1uxo3sa"
            >
              <input
                class="css-1r71f0z toggle-input"
                type="checkbox"
              />
              <div
                class="css-10kxbe9 toggle-handle"
              >
                <span
                  class="css-i4koh4"
                />
              </div>
            </label>
            <span
              class="css-noruk0"
              role="button"
            >
              Multiple
            </span>
          </div>
        </span>
        <div
          class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
        >
          <div
            class="css-15txs7d"
            height="10"
            width="10"
          >
            <svg
              id="question-mark-small"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <g
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              >
                <path
                  d="M5 9h0M3.2 2.8C3.2 1.9 3.9 1 5 1s1.8.8 1.8 1.8c0 .8-.4 1.5-1.3 1.7-.3.2-.5.5-.5.8v.9"
                />
              </g>
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-19wsyy"
    >
      <div
        class="space-y-5"
      >
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <div>
            <div
              class="relative flex w-full items-center text-left"
              data-testid="SelectRecipient__wrapper"
            >
              <div
                class="relative w-full"
                data-testid="SelectDropdown"
              >
                <div
                  class="sr-only css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="select-list__input"
                      name="recipientAddress"
                      readonly=""
                      tabindex="-1"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="w-full"
                >
                  <div
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-owns="SelectRecipient__dropdown-menu"
                    role="combobox"
                  >
                    <div>
                      <label
                        for="SelectRecipient__dropdown-input"
                        id="SelectRecipient__dropdown-label"
                      />
                      <div
                        class="css-n1b0kl"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-cm9d5u"
                          />
                        </div>
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="SelectRecipient__dropdown-menu"
                            aria-invalid="false"
                            aria-labelledby="SelectRecipient__dropdown-label"
                            autocomplete="off"
                            class="no-ligatures w-full border-none cursor-default css-1vs1awz"
                            data-testid="SelectDropdown__input"
                            id="SelectRecipient__dropdown-input"
                            name="recipientAddress"
                            placeholder="Address"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <div
                              class="flex items-center cursor-pointer"
                              data-testid="SelectRecipient__select-recipient"
                            >
                              <div
                                class="css-1i4b0eq"
                                height="20"
                                width="20"
                              >
                                <svg
                                  id="user"
                                  viewBox="0 0 20 20"
                                  x="0"
                                  xml:space="preserve"
                                  xmlns="http://www.w3.org/2000/svg"
                                  y="0"
                                >
                                  <g
                                    fill="none"
                                    stroke="currentColor"
                                    stroke-linecap="round"
                                    stroke-linejoin="round"
                                    stroke-width="2"
                                  >
                                    <circle
                                      cx="10"
                                      cy="5"
                                      r="4"
                                    />
                                    <path
                                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                                    />
                                  </g>
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-labelledby="SelectRecipient__dropdown-label"
                      id="SelectRecipient__dropdown-menu"
                      role="listbox"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
        <fieldset
          class="flex min-w-0 flex-col css-1bcidjh"
        >
          <label
            class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
            data-testid="FormLabel"
            for="amount"
          >
            <span>
              Amount
            </span>
            <span
              class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="AddRecipient__available"
            >
              (
              Available
               
              <span
                class="whitespace-nowrap"
                data-testid="Amount"
              >
                0
              </span>
              )
            </span>
          </label>
          <div
            class="flex space-x-2"
          >
            <div
              class="flex-1"
            >
              <div
                class="relative"
              >
                <div
                  class="css-n1b0kl"
                >
                  <div
                    class="relative flex h-full flex-1"
                  >
                    <input
                      autocomplete="off"
                      class="no-ligatures w-full border-none css-1vs1awz"
                      data-testid="AddRecipient__amount"
                      name="amount"
                      placeholder="Enter an amount"
                      type="text"
                      value="0"
                    />
                  </div>
                  <div
                    class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                    data-testid="Input__addon-end"
                  >
                    <div
                      class=""
                    >
                      <span
                        class="whitespace-nowrap whitespace-no-break text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                        data-testid="Amount"
                      >
                        0 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="inline-flex"
            >
              <button
                class="active css-1ye8a3b"
                data-testid="AddRecipient__send-all"
                type="button"
              >
                Send All
              </button>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;
